--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>Acceuil</title>
+<title>Inscription 2014</title>
 <link rel="shortcut icon" href="img/icon.png">
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
@@ -11,12 +11,12 @@
 <body >
 <img src='img/bg2.png' id='bg-img'>
 <div id='popup'>
-	<div id="title-fr" ></br></br><h2>Trouver le code du centre de vote le plus proche de vous, et INSCRIVEZ-VOUS grâce à votre mobile !!</h2></div>
-	<div id="title-ar" ><h1> !! ابحث عن رمز أقرب مركز إقتراع لك، و سجل نفسك عبر الهاتف</h1></div>
+	<div id="title-fr" ></br></br>Trouver le code du centre de vote le plus proche de vous, et INSCRIVEZ-VOUS grâce à votre mobile !!</div>
+	<div id="title-ar" > </br>!! ابحث عن رمز أقرب مركز إقتراع لك، و سجل نفسك عبر الهاتف</div>
 	
 	<div style="text-align:center; ">
-	<a href='fr' id='salut' class='ui-button2'>Français &rsaquo;</a>
-	<a href='ar' id='salut2' class='ui-button2'>عربية &rsaquo;</a>
+	<a style="text-decoration:none;"href='fr' id='salut' class='ui-button2'>Français</a>
+	<a style="text-decoration:none;"href='ar' id='salut2' class='ui-button2'>عربية</a>
 	</div>
 
 	<a style="text-decoration:none;"href="http://www.mourakiboun.org/"><img src='img/logo.png' id='logo2'></a>
