--- a/ar/index.html
+++ b/ar/index.html
@@ -22,7 +22,7 @@
 
 
 <div id='map'></div>
-<a style="text-decoration:none;" href='#' id='geolocate' class='ui-button'>إضغط هنا، لتحديد مكانك على الخريطة</a>
+<a style="text-decoration:none;" href='#' id='geolocate' class='ui-button'><b>إضغط هنا</b>، لتحديد مكانك على الخريطة</a>
 <a style="text-decoration:none;" href="http://www.mourakiboun.org/"><img src='../img/logo.png' id='logo'></a>
 
 <script>
