--- a/fr/index.html
+++ b/fr/index.html
@@ -26,7 +26,7 @@
 
 
 <div id='map'></div>
-<a style="text-decoration:none;" href='#' id='geolocate' class='ui-button'>Cliquez ici, pour vous localiser sur la carte</a>
+<a style="text-decoration:none;" href='#' id='geolocate' class='ui-button'><b>Cliquez ici</b>, pour vous localiser sur la carte</a>
 <a style="text-decoration:none;"href="http://www.mourakiboun.org/"><img src='../img/logo.png' id='logo'></a>
 
 <script>
