--- a/ar/index.html
+++ b/ar/index.html
@@ -23,7 +23,7 @@
 
 <div id='map'></div>
 <a style="text-decoration:none;" href='#' id='geolocate' class='ui-button'><b>إضغط هنا</b>، لتحديد مكانك على الخريطة</a>
-<a style="text-decoration:none;" href="http://www.mourakiboun.org/"><img src='../img/logo.png' id='logo'></a>
+<a style="text-decoration:none;" href="https://www.facebook.com/mourakiboun"><img src='../img/logo.png' id='logo'></a>
 
 <script>
 var geolocate = document.getElementById('geolocate');
