--- a/fr/index.html
+++ b/fr/index.html
@@ -27,7 +27,7 @@
 
 <div id='map'></div>
 <a style="text-decoration:none;" href='#' id='geolocate' class='ui-button'><b>Cliquez ici</b>, pour vous localiser sur la carte</a>
-<a style="text-decoration:none;"href="http://www.mourakiboun.org/"><img src='../img/logo.png' id='logo'></a>
+<a style="text-decoration:none;"href="https://www.facebook.com/mourakiboun"><img src='../img/logo.png' id='logo'></a>
 
 <script>
 var geolocate = document.getElementById('geolocate');
