--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<a style="text-decoration:none;"href='ar' id='salut2' class='ui-button2'>عربية</a>
 	</div>
 
-	<a style="text-decoration:none;"href="http://www.mourakiboun.org/"><img src='img/logo.png' id='logo2'></a>
+	<a style="text-decoration:none;"href="https://www.facebook.com/mourakiboun"><img src='img/logo.png' id='logo2'></a>
 </div>
 
 
